Gradle 8.5 support